gcc/testsuite/gfortran.dg/pr95690.f90
! { dg-do compile }
module m
contains
   subroutine s
      print *, (erfc) ! { dg-error "not a floating constant" }
   end
   function erfc()
   end
end
